Fixed ul alignment in footer

--- a/src/app/components/Footer/Footer.sass
+++ b/src/app/components/Footer/Footer.sass
@@ -2,6 +2,9 @@ footer
   background-color: #333
   text-align: center
 
+  ul 
+    padding-inline-start: 0
+
   li
     display: inline-block
     padding: 0 10px
@@ -10,4 +13,4 @@ footer
     a 
       color: white
       &:hover 
-        color: blue
+        color: lightblue
